--- a/index3.html
+++ b/index3.html
@@ -19,6 +19,7 @@
             <label for="age">Enter Age :</label>
             <input type="number" placeholder="age" id="age">
         </div>
+        <button>click me</button>
     </form>
   </body>
 </html>
