--- a/index3.html
+++ b/index3.html
@@ -9,11 +9,11 @@
     <form action="/action">
         <div>
           <label for="username">username :</label>
-          <input type="text" placeholder="Enter username" id="username">
+          <input type="text" placeholder="Enter username" id="username" name="use">
         </div>
         <div>
           <label for="password">password :</label>
-          <input type="password" placeholder="Enter password" id="password">
+          <input type="password" placeholder="Enter password" id="password" name="pass">
         </div>
         <div>
             <label for="age">Enter Age :</label>
