--- a/index3.html
+++ b/index3.html
@@ -21,5 +21,10 @@
         </div>
         <button>click me</button>
     </form>
+    <hr>
+    <form action="https://www.ggole.com/seach">
+        <input type="text" placeholder="search in google" name="q">
+        <button>search</button>
+    </form>
   </body>
 </html>
