--- a/index3.html
+++ b/index3.html
@@ -26,5 +26,10 @@
         <input type="text" placeholder="search in google" name="q">
         <button>search</button>
     </form>
+    <form action="/server">
+        <input type="checkbox" id="age " name="age">
+        <label for="age">Age 18+</label>
+        <button>submit</button>
+    </form>
   </body>
 </html>
