--- a/index3.html
+++ b/index3.html
@@ -30,6 +30,8 @@
         <input type="checkbox" id="age " name="age">
         <label for="age">Age 18+</label>
         <button>submit</button>
+        <textarea></textarea>
+        <button>submit</button>
     </form>
   </body>
 </html>
