--- a/index3.html
+++ b/index3.html
@@ -32,7 +32,8 @@
         <button>submit</button>
         <br>
         <hr>
-        <textarea></textarea>
+        <label for="feedback">please give feedback</label>
+        <textarea id="feedback" name="feedback"></textarea>
         <button>submit</button>
     </form>
   </body>
